# lipid_gui_copy_w_permissions

./: dda_config.yaml  setup.cfg
.github/workflows/: build.yml
gui/: Makefile  experiment.spec  package-lock.json  package.json  update_version.py  yamlwriter.spec
gui/src/: index.js  preload.js  style.css
gui/src/docs/: README.txt
gui/src/experiment/: experiment.html  experiment.py  renderer_exp.js  yamlwriter.py
gui/src/intro/: intro.html
gui/src/results/: renderer_res.js  results.html
lipidimea/: __init__.py  __main__.py  annotation.py  params.py  typing.py  util.py
lipidimea/_cli/: __init__.py  annotate.py  dda.py  dia.py  utility.py
lipidimea/_include/: default_ann_params.yaml  default_dda_params.yaml  default_dia_params.yaml  default_params.yml  literature_ccs_trend_params.yml  results.sql3  results.sqlite3
lipidimea/_include/lipidlib/: lmaps.yaml
lipidimea/_include/rt_ranges/: RP.yaml
lipidimea/_include/scdb/: neg.yaml  pos.yml
lipidimea/_lipidlib/: __init__.py  _fragmentation_rules.py  lipids.py  parser.py
lipidimea/msms/: __init__.py  _util.py  dda.py  dia.py
lipidimea/test/: __all_tests.py  __include.py  __init__.py  __main__.py  annotation.py  params.py  util.py
lipidimea/test/_include/: README.md  bad_ann_config.yaml  bad_dda_config_1.yaml  bad_dda_config_2.yaml  bad_dia_config_1.yaml  good_ann_config.yaml  good_dda_config.yaml  good_dia_config.yaml
lipidimea/test/_lipidlib/: __init__.py  __main__.py  _fragmentation_rules.py  lipids.py  parser.py
lipidimea/test/msms/: __all_tests.py  __init__.py  __main__.py  _util.py  dda.py  (+1 more)
(+29 files in other folders)
