[metadata]
name = lipidimea
version = attr: lipidimea.__version__
author = Dylan Ross
author_email = dylan.ross@pnnl.gov
description = Lipidomics Integrated Multi-Experiment Analysis tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PNNL-m-q/lipidimea
project_urls =
    Bug Tracker = https://github.com/PNNL-m-q/lipidimea/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.12
packages = lipidimea
install_requires =
    h5py
    hdf5plugin
    pandas
    numpy
    scipy
    matplotlib
    mzapy
